# totem-mm

./: .gitignore  README.md  env.example  main.py  pyproject.toml  run  settings.py  stop
connectors/: base.py  betfair.py
connectors/betfair/: client.py  poll.py  prices.py  stream.py
connectors/old/: oddsapi.py  polymarket.py
connectors/polymarket/: client.py  poll.py  rfq_listener.py  stream.py
docs/: VISUALIZATION_OPTIONS.md
ghost-fill-scan/: check_approvals.py  scan.py  scan_rpc.py  wallet_activity.py
grafana/: README.md  docker-compose.yml  prometheus-native.yml  prometheus.yml
grafana/dashboards/: live_odds_poll.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/scripts/: build_dashboard.py  check_data.py  diagnose.sh  verify_pipeline.py
model-simulation/: .gitignore  ARCHITECTURE.md  COMPETITIVE_EDGE.md  CURRENT_STATE.md  DATA_SOURCES.md  DP_MATH.md  HONEST_SCORES.json  LESSONS_LEARNED.md  PLAN.md  PROGRESS.md  REFERENCES.md  RESEARCH_FINDINGS.md  SCORES.md  STRUCTURE.md  V2_SPEC.md  VERIFICATION.md  pyproject.toml
model-simulation/configs/: default.toml
model-simulation/scripts/: honest_test.py  runner.py
model-simulation/src/calibration/: calibrator.py
model-simulation/src/dp/: solver.py  states.py
model-simulation/src/transitions/: outcome_model.py
models/: __init__.py  odds.py  rfq.py
polymarket-simulator/: .gitignore  HOW_TO_RUN.md  capture.py  combined_score.py  conftest.py  cricket_score.py  pyproject.toml  replay_tests.yaml  run_capture.sh  score_log.py
polymarket-simulator/backtest/: __init__.py  book.py  config.py  engine.py  enums.py  events.py  fees.py  market.py  matching.py  metrics.py  orders.py  portfolio.py  replay.py  strategy.py  suite.py  tick.py  validators.py
polymarket-simulator/backtest/tests/: test_book.py  test_engine_e2e.py  test_fees.py  test_market.py  test_matching.py  test_portfolio.py  test_replay.py  test_suite.py  test_tick.py  test_validators.py
polymarket-simulator/captures/: 20260322_115713_scores_1491738.jsonl  20260322_115713_scores_1491738_events.json
polymarket-simulator/scripts/: run_replay.py  run_suite.py
polymarket-simulator/simulator/: __main__.py  app_state.py  config.py  event_recorder.py  fill_poller.py  market_discovery.py  market_ws.py  matching_engine.py  models.py  order_manager.py  orderbook.py  position_tracker.py  server.py  sniping_detector.py  wallet_book.py  wallet_tracker.py
polymarket-simulator/simulator/static/: index.html
polymarket-simulator/strategies/: hybrid_entry_revert.py  inventory_balancing_mm.py  maker_entry_revert.py  taker_revert_signal.py  taker_revert_with_unwind.py  taker_rolling_revert_signal.py  two_layer_signal.py
polymarket-taker/: .env.example  .gitignore  CHANGES.md  Cargo.toml  DESIGN.md  DIRECTION.md  MM_STRATEGY.md  SWEEP.md
polymarket-taker/benches/: hot_path.rs
polymarket-taker/deploy/: totem-taker.service  totem-telegram.service
polymarket-taker/scripts/: gen_v2_test_vectors.py  swap_usdc.py  verify_v2_vectors.py
polymarket-taker/src/: capture.rs  clob_auth.rs  clob_market.rs  config.rs  ctf.rs  db.rs  dls.rs  fees.rs  heartbeat.rs  latency.rs  lib.rs  main.rs  maker.rs  market_ws.rs  order_cache.rs  orders.rs  orders_v2.rs  position.rs  price_history.rs  server.rs  signal.rs  state.rs  strategy.rs  sweep.rs  sweep_config.rs  sweep_server.rs  sweep_state.rs  trading.rs  types.rs  user_ws.rs  web.rs  ws_health.rs
polymarket-taker/src/tests/: ctf_tests.rs  db_tests.rs  dispatch_tests.rs  entry_direction_tests.rs  fees_tests.rs  heartbeat_tests.rs  latency_tests.rs  maker_tests.rs  mod.rs  orders_tests.rs  pending_revert_tests.rs  position_tests.rs  price_history_tests.rs  signal_group_tests.rs  signal_tests.rs  strategy_tests.rs  user_ws_tests.rs  ws_health_tests.rs
polymarket-taker/telegram-bot/: bot.py  config.json  config.json.example
polymarket-taker/tests/: api_key_auth.rs  derive_and_sell.rs  v2_signing.rs  v2_staging.rs
polymarket-taker/tests/fixtures/: v2_signing_vectors.json
pricing/: quote_engine.py
scripts/: ANALYSIS.md  BACKTEST.md  RUN_LIVE_FEED.md  _check_lat.py  _viz.py  analyze_match.py  audit_event_book.py  backtest_maker.py  backtest_taker.py  build_team_a_event_book.py  build_workbook_espn_only.py  compare_clean_matches.py  compare_espn_vs_capture_timing.py  convert_to_excel.py  cricket_match_lookup.py  dls_monitor.py  dp_monitor.py  event_book_capture.py  event_gap_breakdown.py  event_gap_stats.py  event_impact_analysis.py  event_market_lead.py  fetch_espn_ipl_ballbyball.py  fill_market_movement.py  find_complete_matches.py  focused_match_report.py  inspect_capture_wins.py  inspect_zero_gaps.py  ipls_strategy_backtest.py  live_capture.py  live_feed_common.py  live_feed_polling.py  live_feed_polling_with_plots.py  live_feed_streaming.py  live_monitor.py  master_match_report.py  match_analytics.py  match_analytics_delmum.py  parse_events.py  predict_event_book_dp.py  (+29 more)
scripts/schedule/: launch_today.py  refresh_upcoming.py  run_now.sh  stop_today.sh
utils/: data_persistence.py  logging_config.py
