[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "totem-mm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.31.0",
    "py-clob-client>=0.34.0",
    "pydantic>=2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[tool.setuptools]
packages = ["connectors", "connectors.betfair", "connectors.polymarket", "models", "utils", "pricing"]

[tool.setuptools.package-data]
"*" = ["*.py"]
