[project]
name = "cricket-win-probability"
version = "0.1.0"
description = "DP-based cricket win probability engine for IPL T20"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "pyarrow",
    "polars>=0.20",
    "numpy>=1.24",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "httpx",
    "tomli",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ipython",
    "jupyter",
    "matplotlib",
    "seaborn",
]
espn = [
    "python-espncricinfo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
