[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-simulator"
version = "0.2.0"
description = "Polymarket live simulator + CLOB replay backtest engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
polymarket-sim = "simulator.__main__:main"

[tool.setuptools.packages.find]
include = ["simulator*", "backtest*", "strategies*"]

[tool.pytest.ini_options]
testpaths = ["backtest/tests"]
python_files = ["test_*.py"]
